added some of my ideas for proofs in a rough form and have highlighted these parts in blue to remind me to check and complete at a later date.

--- a/preamble.sty
+++ b/preamble.sty
@@ -68,6 +68,8 @@
 \newtheorem{lemma}[theorem]{Lemma}
 \newtheorem{corollary}[theorem]{Corollary}
 
+\newtheorem{conjecture}{Conjecture}
+
 \newtheorem{definition}{Definition}[section]
 
 \newtheorem{remark}{Remark}
